# erquy

./: .gitignore  CMakeLists.txt  README  README.md
core/: CMakeLists.txt
core/include/: erquy.hpp  solver.hpp
core/src/: erquy.cpp  integrator.cpp  solver.cpp
data/ball/: ball.urdf
data/elbow/: elbow.urdf
data/idefX/: create_urdf.py  idefX.urdf  meshes.blend1
data/idefX/meshes/: arm.dae  foot.dae  forearm.dae  idefX.urdf  meshes.blend  meshes.blend1  meshes.dae  motor.dae  trunk.dae
examples/: CMakeLists.txt
examples/first/: main.cpp
python/: CMakeLists.txt  binding.cpp  test.py  usage.py  visualizer.py
